--- a/agents-docs/content/docs/typescript-sdk/structured-outputs/status-updates.mdx
+++ b/agents-docs/content/docs/typescript-sdk/structured-outputs/status-updates.mdx
@@ -28,14 +28,16 @@ Status updates are automatically generated summaries that:
 
 The status updater operates through three main components:
 
-### 1. GraphSession Event Tracking
+### 1. Agent Session Event Tracking
 
 Every agent operation is tracked as events:
 
 - **agent_generate**: Text generation or structured output
 - **transfer**: Agent-to-agent transfers
 - **delegation_sent/returned**: Task delegation between agents
-- **tool_execution**: Tool calls and results
+- **tool_call**: When a tool is called with arguments
+- **tool_result**: When a tool execution completes (success or failure)
+- **error**: System-level errors and configuration issues
 - **artifact_saved**: Document or data artifacts created
 
 ### 2. Intelligent Triggering
