--- a/agents-docs/content/docs/quick-start/traces.mdx
+++ b/agents-docs/content/docs/quick-start/traces.mdx
@@ -1,5 +1,5 @@
 ---
-title: Traces and Live Debugger
+title: Live Debugger, Traces, and OTEL Telemetry 
 sidebarTitle: Traces
 description: Set up SigNoz to enable full observability with traces and live debugging capabilities for your agents.
 icon: "LuActivity"
