--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -8,7 +8,7 @@ keywords: troubleshooting, debugging, errors, timeline, signoz, widget implement
 
 ## Overview
 
-When something breaks in your Inkeep agent system, follow this systematic approach to identify and resolve the issue. This guide provides a structured methodology for debugging problems across different components of your agent infrastructure.
+This guide provides a structured methodology for debugging problems across different components of your agent system.
 
 ## Step 1: Check the Timeline
 
@@ -30,7 +30,6 @@ Clicking on this error card reveals:
 - **Exception stacktrace**: The complete stack trace showing exactly where the error occurred in the code
 
 This detailed error information helps you pinpoint exactly what went wrong and where in your agent's execution chain.
-
 
 ## Step 2: Check Signoz
 
