--- a/agents-docs/content/docs/typescript-sdk/structured-outputs/data-components.mdx
+++ b/agents-docs/content/docs/typescript-sdk/structured-outputs/data-components.mdx
@@ -1,6 +1,7 @@
 ---
-title: Data Components
-description: Learn how to create and use data components for rich agent responses
+title: Create Rich UI Blocks with Data Components
+sidebarTitle: Custom UI Blocks
+description: Learn how to create and use data components for rich, interactive Agent messages.
 icon: "LuBlocks"
 ---
 
