--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -35,7 +35,7 @@ pnpm add @inkeep/agents-ui
 
     const buttonProps: InkeepChatButtonProps = {
       aiChatSettings: {
-        graphUrl: "https://your-api.example.com/api/chat",
+        agentUrl: "https://your-api.example.com/api/chat",
         apiKey: process.env.REACT_APP_INKEEP_API_KEY, // Your API key
       },
     };
