--- a/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
@@ -41,7 +41,7 @@ pnpm add @inkeep/agents-ui
 
       const modalProps: InkeepModalChatProps = {
         aiChatSettings: {
-          graphUrl: "https://your-api.example.com/api/chat",
+          agentUrl: "https://your-api.example.com/api/chat",
           apiKey: process.env.REACT_APP_INKEEP_API_KEY, // Your API key
         },
         modalSettings: {
