--- a/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
@@ -36,7 +36,7 @@ pnpm add @inkeep/agents-ui
     export default function App() {
       const embeddedChatProps: InkeepEmbeddedChatProps = {
         aiChatSettings: {
-          graphUrl: "https://your-api.example.com/api/chat",
+          agentUrl: "https://your-api.example.com/api/chat",
           apiKey: process.env.REACT_APP_INKEEP_API_KEY, // Your API key
         },
       };
