--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -42,7 +42,7 @@ pnpm add @inkeep/agents-ui
 
       const sidebarChatProps: InkeepSidebarChatProps = {
         aiChatSettings: {
-          graphUrl: "https://your-api.example.com/api/chat",
+          agentUrl: "https://your-api.example.com/api/chat",
           apiKey: process.env.REACT_APP_INKEEP_API_KEY, // Your API key
         },
         position: "right",
@@ -73,7 +73,7 @@ pnpm add @inkeep/agents-ui
     export default function App() {
       const sidebarChatProps: InkeepSidebarChatProps = {
         aiChatSettings: {
-          graphUrl: "https://your-api.example.com/api/chat",
+          agentUrl: "https://your-api.example.com/api/chat",
           apiKey: process.env.REACT_APP_INKEEP_API_KEY, // Your API key
         },
         position: "right",
