--- a/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
+++ b/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
@@ -11,11 +11,41 @@ icon: "TbInputSpark"
 1. Go to the Artifact Components tab in the left sidebar. Then select "New artifact component".
 2. Add in an id, name, and description. These are required fields.
 3. For the props schema, you can either:
-   - **Enter a JSON schema** with `inPreview: true` properties to define specific fields
+   - **Enter a JSON schema** with `inPreview: true` properties to define specific fields that will be immediately available
    - **Leave empty** to save the entire tool result without filtering
 4. Click "Submit".
 
 To visually add the artifact component to the Agent, see the [Sub Agents](/visual-builder/sub-agents#adding-artifact-components) page for details.
+
+### Preview Fields
+
+Set `inPreview: true` on properties for immediate availability. These fields are:
+- Shown to other agents for reasoning
+- Streamed in real-time to clients (Vercel AI SDK)
+- Auto-rendered by Inkeep's widget (citations as interactive cards)
+- Available immediately in UI (full artifact loads on-demand)
+
+**Example:**
+
+```json
+{
+  "type": "object",
+  "properties": {
+    "title": { "type": "string", "inPreview": true },
+    "url": { "type": "string", "inPreview": true },
+    "content": { "type": "array" }
+  }
+}
+```
+
+Citation artifacts with `title`, `url`, and `record_type` preview fields are auto-rendered as interactive cards by Inkeep's widget, providing source attribution.
+
+<img
+  src="/images/citation-widget-example.png"
+  alt="Citation artifact rendered as an interactive card in the Inkeep widget showing source attribution"
+  width="100%"
+  style={{ borderRadius: "10px", marginTop: "1rem" }}
+/>
 
 ## Artifact Name & Description Generation
 
