slightly changed docs

--- a/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
+++ b/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
@@ -6,6 +6,10 @@ icon: "TbInputSpark"
 
 <Snippet file="multi-agent-framework/artifacts.mdx" />
 
+<Callout>
+**Quick Start**: Citation artifacts are automatically included when you create a new project with `npx @inkeep/create-agents`. You'll find the complete implementation in `artifact-components/citation.ts` in your project. They provide a ready-to-use example for source attribution and are automatically rendered by the Inkeep widget with professional styling and interactions.
+</Callout>
+
 ## How to create an artifact component
 
 1. Go to the Artifact Components tab in the left sidebar. Then select "New artifact component".
