docs for copy trace

--- a/agents-docs/content/docs/quick-start/traces.mdx
+++ b/agents-docs/content/docs/quick-start/traces.mdx
@@ -3,7 +3,7 @@ title: Traces and Live Debugger
 sidebarTitle: Traces
 description: Set up SigNoz to enable full observability with traces and live debugging capabilities for your agents.
 icon: "LuActivity"
-keywords: SigNoz, traces, live debugger, observability, OpenTelemetry, monitoring, distributed tracing, debugging
+keywords: SigNoz, traces, live debugger, observability, OpenTelemetry, monitoring, distributed tracing, debugging, copy trace, export trace, JSON export
 ---
 
 ## Overview
@@ -12,6 +12,7 @@ The Inkeep Agent Framework provides powerful **traces** and **live debugging** c
 
 - **Real-time trace visualization** - See exactly how your agents execute step-by-step
 - **Live debugging** - Debug agent conversations as they happen
+- **Export traces as JSON** - Copy complete traces for offline analysis and debugging
 - **Full observability** - Complete OpenTelemetry instrumentation for monitoring
 - **Performance insights** - Identify bottlenecks and optimize agent performance
 
