--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -35,6 +35,13 @@ This detailed error information helps you pinpoint exactly what went wrong and w
 
 The `Copy Trace` button in the timeline view allows you to export the entire conversation trace as JSON. This is particularly useful for offline analysis and debugging complex flows.
 
+<img
+  src="/images/copy-trace.png"
+  alt="Copy Trace button in the timeline view for exporting conversation traces"
+  width="100%"
+  style={{ borderRadius: "10px" }}
+/>
+
 #### What's Included in the Trace Export
 
 When you click `Copy Trace`, the system exports a JSON object containing:
